--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   <title>RNG Uniformity Test Dashboard</title>
   <style>
     :root { --bg:#0b0f14; --card:#121a24; --muted:#9bb0c9; --text:#eaf2ff; --line:#233245; }
